@@ -2,11 +2,12 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 #
-# $Id: ChangeLog,v 1.21 2004/11/10 16:27:05 port001 Exp $
+# $Id: ChangeLog,v 1.22 2004/11/10 16:33:33 port001 Exp $
 
 10 Nov 2004; Ian Leitch <port001@gentoo.org>:
  * Added a timeout check to wait_threads()
  * Added a HeaderTmplSent bool to the State module
+ * Moved HTMLHeadersSent into the State module
  * Bug fixes
 
 09 Nov 2004; Ian Leitch <port001@gentoo.org>:
